# nc-rs

./: .travis.yml  Cargo.toml  README.md
src/: attacks.rs  bitboard.rs  board.rs  gmove.rs  main.rs  piece.rs  position.rs  square.rs  zobrist.rs
