[package]
name = "nc"
version = "0.1.0"
authors = ["codeandkey <jtst@iastate.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arr_macro = "0.1.3"
lazy_static = "1.4.0"
log = "0.4"
pretty_env_logger = "0.4.0"
rand = "0.7.3"